# otel_tracing

./: Cargo.toml
examples/: log.rs  main.rs  trace_propagation.rs
src/: config.rs  lib.rs
src/adapters/: mod.rs
src/adapters/datadog/: formatter.rs  log_processor.rs  log_provider.rs  logger.rs  logger_adapter.rs  metrics.rs  mod.rs  trace.rs  tracer.rs  tracing.rs
src/domain/: metrics.rs  mod.rs  telemetry.rs
src/facade/: log.rs  metrics.rs  mod.rs  trace.rs
src/ports/: logger.rs  metrics.rs  mod.rs  tracer.rs
src/services/: mod.rs  telemetry.rs  tracing.rs
src/tracing/: formatter.rs  init.rs  mod.rs  shutdown.rs  tracer.rs
tests/: datadog_logger.rs
