[package]
name = "otel_tracing"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-resource-detectors = { git ="https://github.com/open-telemetry/opentelemetry-rust-contrib.git"}
opentelemetry_sdk = "0.29"
dotenvy = "0.15.7"
tracing = "0.1.41"
opentelemetry-appender-tracing = "0.29"
tracing-subscriber = {version = "0.3.19", features =["env-filter","registry", "std", "fmt"]}
async-trait = "0.1.88"
chrono = "0.4.40"
bon = "3.5.1"
tracing-opentelemetry = "0.30.0"
tracing-opentelemetry-instrumentation-sdk = { version = "0.16.0", features = ["http"], optional = true }
serde = { version ="1.0.219", features = ["derive"]}
tracing-serde = "0.2.0"
serde_json = "1.0.140"
tracing-appender = "0.2.3"
opentelemetry-datadog  = { git ="https://github.com/open-telemetry/opentelemetry-rust-contrib.git"}
reqwest = "0.12.15"

[dev.dependencies]
# tokio = { version = "1.44.1", features = ["full"] }


[[example]]
name = "tr"
path = "examples/trace_propagation.rs"

[dev-dependencies]
mockall = "0.13.1"
